# NesoraMikomiWxWidgets

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  NesoraMikomi.cpp  NesoraMikomi.h  NesoraMikomiWxWidgets.sln  NesoraMikomiWxWidgets.vcxproj  NesoraMikomiWxWidgets.vcxproj.filters  README.md  crowdin.yml
lib/: README.md
locale/: NesoraMikomiWxWidgets.pot  POTFILES.in  memo.txt
locale/af/: NesoraMikomiWxWidgets.po
locale/ar/: NesoraMikomiWxWidgets.po
locale/ca/: NesoraMikomiWxWidgets.po
locale/cs/: NesoraMikomiWxWidgets.po
locale/da/: NesoraMikomiWxWidgets.po
locale/de/: NesoraMikomiWxWidgets.po
locale/el/: NesoraMikomiWxWidgets.po
locale/en/: NesoraMikomiWxWidgets.po
locale/es/: NesoraMikomiWxWidgets.po
locale/fi/: NesoraMikomiWxWidgets.po
locale/fr/: NesoraMikomiWxWidgets.po
locale/he/: NesoraMikomiWxWidgets.po
locale/hu/: NesoraMikomiWxWidgets.po
locale/it/: NesoraMikomiWxWidgets.po
locale/ja/: NesoraMikomiWxWidgets.mo  NesoraMikomiWxWidgets.po
locale/ko/: NesoraMikomiWxWidgets.po
locale/nl/: NesoraMikomiWxWidgets.po
locale/no/: NesoraMikomiWxWidgets.po
locale/pl/: NesoraMikomiWxWidgets.po
locale/pt/: NesoraMikomiWxWidgets.po
locale/ro/: NesoraMikomiWxWidgets.po
locale/ru/: NesoraMikomiWxWidgets.po
locale/sr/: NesoraMikomiWxWidgets.po
locale/sv/: NesoraMikomiWxWidgets.po
locale/tr/: NesoraMikomiWxWidgets.po
locale/uk/: NesoraMikomiWxWidgets.po
locale/vi/: NesoraMikomiWxWidgets.po
locale/zh/: NesoraMikomiWxWidgets.po
src/: NesoraMikomi.cpp  NesoraMikomi.h
src/Nesora/: Nesora.h  NesoraDefines.h  ParametricNesroaDefines.h
src/Nesora/filter/: NesoraCubeIIRFilter.h  NesoraFilter.cpp  NesoraFilter.h  NesoraFormantFilter.cpp  NesoraFormantFilter.h  NesoraIIRFilter.cpp  NesoraIIRFilter.h  NesoraParametricIIRFilter.cpp  NesoraParametricIIRFilter.h  NesoraThroughFilter.h  NesoraVowelParam.h
src/Nesora/script/: NesoraMIDI.cpp  NesoraMIDI.h  NesoraScript.h  NesoraScriptOneTone.cpp  NesoraScriptOneTone.h  NesoraScriptPlay.cpp  NesoraScriptPlay.h
src/Nesora/source/: NesoraRosenbergWave.cpp  NesoraRosenbergWave.h  NesoraSinSource.cpp  NesoraSinSource.h  NesoraSource.cpp  NesoraSource.h
src/Nesora/voice/: NesoraVoice.cpp  NesoraVoice.h
src/NesoraLayout/: NesoraEvents.cpp  NesoraEvents.h  NesoraIDs.h
src/NesoraLayout/character/: NesoraCharacterPanel.cpp  NesoraCharacterPanel.h
src/NesoraLayout/dictionaly/: NesoraDictionalyPanel.cpp  NesoraDictionalyPanel.h
src/NesoraLayout/frame/: NesoraMainFrame.cpp  NesoraMainFrame.h
src/NesoraLayout/sing/: NesoraMIDIPanel.cpp  NesoraMIDIPanel.h  NesoraSingPanel.cpp  NesoraSingPanel.h  NesoraVelocityPanel.cpp  NesoraVelocityPanel.h
src/NesoraLayout/speak/: NesoraSpeakPanel.cpp  (+1 more)
src/NesoraStyle/: NesoraBitmap.h  NesoraButton.h  NesoraColor.h  NesoraStyle.h
(+37 files in other folders)
